# quill

./: .gitignore  CLAUDE.md  README.md
scripts/: install-dev.sh  test.sh
shell/src/: index.html  main.js  overlay.css  overlay.html  overlay.js  styles.css
shell/src-tauri/: Cargo.toml  Info.plist  tauri.conf.full.json  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/icons/: icon.icns
shell/src-tauri/resources/qvac/: README.md
shell/src-tauri/src/: commands.rs  config.rs  inference.rs  journal.rs  lib.rs  models.rs  qvac.rs  state.rs  training.rs  training_local.rs  training_scheduler.rs  wire.rs
shell/src-tauri/src/overlay/: apply.rs  clipboard.rs  engaged_elem.rs  engagement_policy.rs  focus_tracker.rs  mod.rs  mouse_arbiter.rs  window.rs
train/: .gitignore  README.md  colab.ipynb  modal_convert.py  modal_train.py  modal_train_personal.py  pyproject.toml
train/colab/: train_nib_v2.ipynb
train/configs/: lora.yaml
train/data/: rsft-round1.jsonl  rsft-round2.jsonl  rsft-round3-bootstrap.jsonl  rsft-round3-targeted.jsonl  rsft-round3.jsonl  seeds-v2_1-combined.jsonl  seeds-v2_1.jsonl  seeds-v2_2-targeted.jsonl
train/eval/: README.md  cases-holdout-2.jsonl  cases-holdout-60.jsonl  cases-holdout.jsonl  cases.jsonl  run_eval.py
train/reports/: h2-qwen-base-holdout.json  h2-qwen-base-holdout60.json  h2-qwen-base-indist.json  h2-v2.1-holdout.json  h2-v2.1-holdout60.json  h2-v2.1-indist.json  nib-faithful-v2.1-holdout.json  nib-faithful-v2.1.json  nib-qwen-v2.json  qwen-base-bare.json  qwen-base-holdout.json
train/scripts/: convert_local.py  eval.py  export_gguf.py  prep_coedit.py  sample_completions.py  train.py  train_personal.py
