[package]
name = "quill"
version = "0.1.0"
edition = "2021"
description = "Local-first grammar assistant"
authors = ["Baris Gunaydin"]

[lib]
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
harper-core = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
