[package]
name = "quill"
version = "0.1.0"
edition = "2021"
description = "Local-first grammar assistant"
authors = ["Baris Gunaydin"]
default-run = "quill"

[lib]
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Pulls in llama-cpp-2 + builds llama.cpp from source. Adds ~2-5 min to the
# first build and requires cmake + a C++ toolchain on the host.
# Enable with: `cargo tauri dev --features llm` or `cargo build --features llm`.
llm = ["dep:llama-cpp-2", "dep:anyhow", "dep:encoding_rs"]
# macOS-only — system-wide focus tracker + click-through overlay window that
# follows the focused text field across apps (Grammarly-style UX). Requires
# Accessibility permission at runtime. Enable with: `--features overlay`.
overlay = [
    "dep:accessibility",
    "dep:accessibility-sys",
    "dep:core-foundation",
    "dep:core-graphics",
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
harper-core = { version = "2", features = ["concurrent"] }
llama-cpp-2 = { version = "0.1", optional = true }
anyhow = { version = "1", optional = true }
encoding_rs = { version = "0.8", optional = true }
# overlay-only (macOS)
accessibility = { version = "0.2", optional = true }
accessibility-sys = { version = "0.2", optional = true }
core-foundation = { version = "0.10", optional = true }
core-graphics = { version = "0.24", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = ["NSWindow", "NSPanel", "NSScreen", "NSResponder", "NSView", "NSPasteboard"] }
objc2-foundation = { version = "0.3", optional = true, features = ["NSGeometry", "NSString"] }

[[bin]]
name = "quill"
path = "src/main.rs"

[[bin]]
name = "quill-rewrite"
path = "src/bin/quill_rewrite.rs"
required-features = ["llm"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
